fix(menu): updated content overflow (#4157)

--- a/src/patternfly/components/Menu/menu.scss
+++ b/src/patternfly/components/Menu/menu.scss
@@ -192,7 +192,7 @@
 
     > .pf-c-menu__content {
       flex-grow: 1;
-      overflow: hidden;
+      overflow-x: hidden;
       transition: var(--pf-c-menu--m-drilldown__content--Transition);
     }
 
